<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        style="@style/loginCard"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_marginBottom="@dimen/loginViewsMargin"
        android:background="@color/white"
        android:elevation="5dp"
        app:cardCornerRadius="@dimen/loginCardRadius">

        <LinearLayout
            android:id="@+id/main_layout"
            style="@style/linearParent"
            android:layout_gravity="center"
            android:padding="@dimen/loginViewsMargin">

            <TextView
                style="@style/headerTextPrimary"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/register" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">

                <EditText
                    android:id="@+id/signUp_name"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_name_hint"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                android:textColorHint="@color/grey"
                android:layout_marginTop="@dimen/signup_text_margin_top">

                <EditText
                    android:id="@+id/signUp_password"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/password_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="8sp"
                android:maxLines="2" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/countryNames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:backgroundTint="@color/primaryTextColor"
                android:hint="@string/login_password_hint"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUp_btn"
                style="@style/loginButton"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="SignUp" />

            <TextView
                android:id="@+id/login"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/signup_login_hint"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />

        </LinearLayout>
        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:visibility="gone"/>
    </androidx.cardview.widget.CardView>
</layout>
