<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/loginCard"
        android:layout_gravity="center"
        android:elevation="5dp"
        app:cardCornerRadius="@dimen/loginCardRadius">

        <LinearLayout
            android:id="@+id/main_layout"
            style="@style/linearParent"
            android:layout_gravity="center"
            android:padding="@dimen/loginViewsMargin">

            <TextView
                style="@style/headerTextPrimary"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="Login" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputName"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextName"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_name_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="@dimen/newsMoreTextSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                android:textColorHint="@color/grey"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/viewParent"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="Forgot Password?"
                android:visibility="gone"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/newsMoreTextSize" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                style="@style/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="Login" />

            <TextView
                android:id="@+id/signUp"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/login_signup_hint"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/primaryTextColor"
                android:textStyle="bold" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:visibility="gone"/>
    </androidx.cardview.widget.CardView>
</layout>